# ultra-test

./: CMakeLists.txt  Dockerfile  READM.md  README.md  main.cpp  test.txt  tests.cpp
exercise1/: exercise1.cpp  exercise1.hpp
exercise2/: exercise2.cpp  exercise2.hpp  test.txt
